--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -43,9 +43,9 @@ body{font-family:Microsoft YaHei,Verdana,Arial,SimSun;color:#666;font-size:14px;
 .M10 span{background:url(../images/ioc.png) -3px -105px;}
 /***右侧内容****/
 .m-right{margin-left:300px;height:100%;}
-.right-nav{height:50px;border-bottom:1px solid #d1d1d1;background:#f6f6f6;}
+.right-nav{height:6%;border-bottom:1px solid #d1d1d1;background:#f6f6f6;}
 .right-nav li{float:left;margin-left:5px;line-height:50px;color:#464646;font-size: 14px;}
-.right-nav li img{position:relative;top:17px;left:15px;}
+.right-nav li img{position:relative;top:2px;left:15px;}
 .right-nav li a{color:#464646;}
 .right-nav li a:hover{color:#00a5a5; text-decoration:underline;}
-.main{width:100%;height:100%;background:#f6f6f6;overflow:auto;}
+.main{width:100%;height:96%;background:#f6f6f6;overflow:auto;}
